--- a/style.css
+++ b/style.css
@@ -1,24 +1,46 @@
 body{
-    background-color: rgb(221, 156, 247)
+    background-color: whitesmoke;
 }
 
 h2{
-    color: rgb(10, 35, 197);
-    font-family ;
-    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: rgb(49, 18, 161);
 }
 
 #name-in, #last-name, #identify, #job-title, #salary{
-    border-color: aqua;
-
+    width: 160px;
+    height: 25px;
+    border-radius: 10%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    border-color: rgb(64, 237, 148);
+    background-color: rgb(183, 239, 239);
 }
 
-
-
+#add-btn{
+    width: 160px;
+    height: 55px;
+    border-radius: 10%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    color: white;
+    background-color: darkblue;
+}
 
 #data-table, th{
     
-    border: 1px solid;
+    border: 2px solid;
+    font-size: large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(6, 11, 107);
+    background-color: aliceblue ;
+}
 
+#first-name-head, #last-name-head, #title-head{
+    padding-right: 250px;
+}
 
+#id-head, #salary-head{
+    padding-right: 100px;
 }
