--- a/style.css
+++ b/style.css
@@ -28,10 +28,21 @@ h2{
     background-color: darkblue;
 }
 
-#data-table, th{
+#data-table{
+    border-collapse: collapse;
+}
+th{
     
     border: 2px solid;
     font-size: large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(6, 11, 107);
+    background-color: rgb(154, 201, 242) ;
+}
+
+tr, td{
+    border: 2px solid;
+    font-size: 18px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(6, 11, 107);
     background-color: aliceblue ;
@@ -44,3 +55,18 @@ h2{
 #id-head, #salary-head{
     padding-right: 100px;
 }
+
+.delete-btn{
+    width: 100px;
+    height: 40px;
+    border-radius: 10%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    color: white;
+    background-color: rgb(240, 88, 88);
+}
+
+#cash{
+    padding-left: 10px;
+}
+
